--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>موقع سَكينة 🕊️ | دليل الخير الشامل</title>
-    
+     
     <style>
         :root {
             --main-blue: #1a2a6c;
@@ -132,6 +132,8 @@
 
         footer { text-align: center; padding: 40px; color: #666; font-size: 0.9rem; }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4495236859576201"
+    crossorigin="anonymous"></script>
 </head>
 <body>
 
